--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "test"
   },
   "scripts": {
+  "eslint": "./node_modules/eslint/bin/eslint.js ./lib/*.js"
+  },
+  "scripts": {
     "test": "./node_modules/mocha/bin/mocha"
   },
   "repository": {
@@ -21,7 +24,9 @@
   },
   "homepage": "https://github.com/pvinthemix/jeopardy#readme",
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "chai": "^4.2.0",
+    "eslint": "^5.7.0",
     "mocha": "^5.2.0"
   }
 }
