--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
     "test": "test"
   },
   "scripts": {
-  "eslint": "./node_modules/eslint/bin/eslint.js ./lib/*.js"
-  },
-  "scripts": {
     "test": "./node_modules/mocha/bin/mocha"
   },
   "repository": {
@@ -26,6 +23,7 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "chai": "^4.2.0",
+    "chai-spies": "^1.0.0",
     "eslint": "^5.7.0",
     "mocha": "^5.2.0"
   }
